# quality-trainning

./: .env.example  .gitignore  README.md  forge.toml.example  pyproject.toml
graphify-out/: .graphify_analysis.json  .graphify_semantic_marker  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/forge/: __init__.py  __main__.py
src/forge/cli/: __init__.py  display.py  main.py
src/forge/core/: __init__.py  budget.py  config.py  context.py  gates.py  hooks.py  models.py  pipeline.py  stage.py
src/forge/datasets/: __init__.py  exporters.py  loaders.py  schemas.py  validators.py
src/forge/metrics/: __init__.py  collector.py  counters.py  reports.py
src/forge/providers/: llm.py
src/forge/registry/: __init__.py  base.py  providers.py  stages.py  templates.py
src/forge/stages/: __init__.py
src/forge/stages/analyze/: __init__.py  analyzer.py
src/forge/stages/benchmark/: __init__.py  benchmarker.py
src/forge/stages/clean/: __init__.py  cleaner.py
src/forge/stages/collect/: __init__.py  collector.py  (+4 more)
src/forge/storage/: __init__.py  base.py  filesystem.py  sqlite.py
src/forge/templates/: __init__.py  base.py  coding.py  cybersecurity.py  reasoning.py
src/forge/trajectories/: __init__.py  browser.py  formatter.py  models.py  recorder.py  terminal.py
src/forge/utils/: __init__.py  cost.py  hashing.py  logging.py
src/forge/verification/: __init__.py  consensus.py  critics.py  judge_ensemble.py  models.py  programmatic.py  scorers.py  validators.py
tests/: conftest.py
tests/core/: test_budget.py  test_config.py  test_gates.py  test_hooks.py  test_pipeline.py  test_pipeline_integration.py
tests/datasets/: test_schemas.py  test_validators.py
tests/stages/clean/: test_cleaner.py
tests/stages/generate/: test_self_consistency.py
tests/verification/: test_consensus.py  test_consensus_judges.py  test_judge_ensemble.py  test_programmatic.py  test_scorers.py
(+18 files in other folders)
